# KinectFusionApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
KinectFusionApp/: CMakeLists.txt  config.toml
KinectFusionApp/include/: depth_camera.h  util.h
KinectFusionApp/src/: depth_camera.cpp  main.cpp
cmake/: Findopenni2.cmake
